--- a/beeper-backend/src/main/resources/application.properties
+++ b/beeper-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Server Configuration
 server.port=8080
-spring.application.name=beeper-api
+spring.application.name=incident-board-api
 
 # Database Configuration (H2 in-memory for local dev)
-spring.datasource.url=jdbc:h2:mem:beeper
+spring.datasource.url=jdbc:h2:mem:incidentboard
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # CORS Configuration
 spring.web.cors.allowed-origins=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-methods=GET,POST,PUT,PATCH,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
 # Actuator Configuration
