--- a/openshift/05-frontend-config.yaml
+++ b/openshift/05-frontend-config.yaml
@@ -68,7 +68,7 @@ kind: ConfigMap
 metadata:
   name: frontend-html
   namespace: incident-board
-binaryData:
+data:
   index.html: |
     <!DOCTYPE html>
     <html lang="en">
