--- a/openshift/03-api.yaml
+++ b/openshift/03-api.yaml
@@ -1,136 +1,141 @@
 # ==================================================
 # BACKEND API BUILDCONFIG
 # ==================================================
-apiVersion: build.openshift.io/v1
-kind: BuildConfig
-metadata:
-  name: api
-  namespace: incident-board
-spec:
-  source:
-    type: Git
-    git:
-      uri: "https://github.com/yosseer/DevOps-Incident-Board.git"
-      ref: main
-    contextDir: beeper-backend
-  strategy:
-    type: Source
-    sourceStrategy:
-      from:
-        kind: ImageStreamTag
-        namespace: openshift
-        name: "maven:3.9.2-jdk-11"
-  output:
-    to:
-      kind: ImageStreamTag
-      name: "api:latest"
-  triggers:
-    - type: GitHub
-      github:
-        secret: webhooksecret
-    - type: ConfigChange
-    - type: ImageChange
-
----
-# ==================================================
-# BACKEND API DEPLOYMENTCONFIG
-# ==================================================
-apiVersion: apps.openshift.io/v1
-kind: DeploymentConfig
-metadata:
-  name: api
-  namespace: incident-board
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: api
-      tier: backend
-  strategy:
-    type: Rolling
-  triggers:
-    - type: ConfigChange
-    - type: ImageChange
-      imageChangeParams:
-        automatic: true
-        containerNames:
-          - api
-        from:
-          kind: ImageStreamTag
-          name: api:latest
-  template:
-    metadata:
-      labels:
-        app: api
-        tier: backend
-    spec:
-      initContainers:
-      - name: wait-for-db
-        image: busybox:1.35
-        command:
-          - sh
-          - -c
-          - |
-            timeout 60 sh -c 'until nc -z postgresql 5432; do echo "waiting for db"; sleep 2; done'
-      containers:
-      - name: api
-        image: image-registry.openshift-image-registry.svc:5000/incident-board/api:latest
-        ports:
-          - containerPort: 8080
-        env:
-          - name: SPRING_DATASOURCE_URL
-            value: jdbc:postgresql://postgresql:5432/incidentboard
-          - name: SPRING_DATASOURCE_USERNAME
-            value: incident_user
-          - name: SPRING_DATASOURCE_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: incident-board-secrets
-                key: DB_PASSWORD
-          - name: SPRING_JPA_HIBERNATE_DDL_AUTO
-            value: update
-          - name: SERVER_PORT
-            value: "8080"
-        resources:
-          requests:
-            memory: 512Mi
-            cpu: 250m
-          limits:
-            memory: 1Gi
-            cpu: 500m
-
----
-# ==================================================
-# BACKEND API SERVICE
-# ==================================================
 apiVersion: v1
 kind: Service
 metadata:
   name: api
   namespace: incident-board
+  labels:
+    app: api
+    app.kubernetes.io/part-of: incident-board
 spec:
+  type: ClusterIP
+  selector:
+    app: api
+  ports:
+  - port: 8080
+    targetPort: 8080
+    protocol: TCP
+    name: http
+---
+apiVersion: apps.openshift.io/v1
+kind: DeploymentConfig
+metadata:
+  name: api
+  namespace: incident-board
+  labels:
+    app: api
+    tier: backend
+    app.kubernetes.io/part-of: incident-board
+spec:
+  replicas: 2
   selector:
     app: api
     tier: backend
-  ports:
-    - port: 8080
-      targetPort: 8080
-
+  strategy:
+    type: Rolling
+    rollingParams:
+      updatePeriodSeconds: 1
+      intervalSeconds: 1
+      timeoutSeconds: 600
+      maxSurge: 25%
+      maxUnavailable: 25%
+  template:
+    metadata:
+      labels:
+        app: api
+        tier: backend
+        app.kubernetes.io/part-of: incident-board
+    spec:
+      containers:
+      - name: api
+        image: quay.io/redhat-developer/java-demo:springboot-backend
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
+          name: http
+          protocol: TCP
+        
+        env:
+        - name: JAVA_OPTS
+          value: "-Xmx512m -Xms256m"
+        - name: SPRING_PROFILES_ACTIVE
+          valueFrom:
+            secretKeyRef:
+              name: incident-board-secrets
+              key: SPRING_PROFILES_ACTIVE
+        - name: SPRING_DATASOURCE_URL
+          value: "jdbc:postgresql://postgresql.incident-board.svc.cluster.local:5432/incidentboard"
+        - name: SPRING_DATASOURCE_USERNAME
+          valueFrom:
+            configMapKeyRef:
+              name: incident-board-config
+              key: DB_USER
+        - name: SPRING_DATASOURCE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: incident-board-secrets
+              key: DB_PASSWORD
+        - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+          value: "update"
+        - name: SPRING_APPLICATION_NAME
+          value: "incident-board-api"
+        - name: SERVER_PORT
+          value: "8080"
+        - name: MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE
+          value: "health,info,metrics"
+        
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "500m"
+        
+        livenessProbe:
+          httpGet:
+            path: /api/incidents/health
+            port: 8080
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        
+        readinessProbe:
+          httpGet:
+            path: /api/incidents/health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 2
+        
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
 ---
-# ==================================================
-# BACKEND API ROUTE
-# ==================================================
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: api
   namespace: incident-board
+  labels:
+    app: api
+    app.kubernetes.io/part-of: incident-board
 spec:
   to:
     kind: Service
     name: api
+    weight: 100
   port:
     targetPort: 8080
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
+  wildcardPolicy: None
