--- a/openshift/database/configmap.yaml
+++ b/openshift/database/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgresql-config
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: postgresql
 data:
@@ -21,10 +21,10 @@ data:
     CREATE USER beeper WITH PASSWORD 'beeper_secure_password_123';
     
     -- Grant permissions
-    GRANT ALL PRIVILEGES ON DATABASE beeper_db TO beeper;
+    GRANT ALL PRIVILEGES ON DATABASE beeper_db TO devops-incident-board-app;
     
     -- Connect to the database and grant schema permissions
     \c beeper_db
-    GRANT ALL ON SCHEMA public TO beeper;
-    ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO beeper;
-    ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON SEQUENCES TO beeper;
+    GRANT ALL ON SCHEMA public TO devops-incident-board-app;
+    ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO devops-incident-board-app;
+    ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON SEQUENCES TO devops-incident-board-app;
