--- a/openshift/backend/buildconfig.yaml
+++ b/openshift/backend/buildconfig.yaml
@@ -2,7 +2,7 @@ apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
   name: beeper-backend
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-backend
 spec:
@@ -30,7 +30,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: beeper-backend
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-backend
 spec:
