--- a/openshift/backend/deployment.yaml
+++ b/openshift/backend/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: beeper-backend
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-backend
     version: v1
@@ -56,7 +56,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: beeper-backend
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-backend
 spec:
@@ -73,7 +73,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: beeper-backend
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-backend
 spec:
