--- a/openshift/database/secret.yaml
+++ b/openshift/database/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgresql-secret
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: postgresql
 type: Opaque
