--- a/openshift/ui/deployment.yaml
+++ b/openshift/ui/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: beeper-ui
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-ui
     version: v1
@@ -59,7 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: beeper-ui
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-ui
 spec:
@@ -76,7 +76,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: beeper-ui
-  namespace: beeper
+  namespace: devops-incident-board-app
   labels:
     app: beeper-ui
 spec:
