--- a/beeper-ui/Containerfile
+++ b/beeper-ui/Containerfile
@@ -1,19 +1,29 @@
-FROM registry.ocp4.example.com:8443/ubi9/nodejs-22:1
+# Builder stage
+FROM registry.ocp4.example.com:8443/ubi9/nodejs-22:1 AS builder
 
-# Run as root to avoid permission issues in some base images
+# Switch to root to ensure permissions
 USER root
 
+# Copy source files
+COPY . /opt/app-root/src/
+
+# Set working directory
 WORKDIR /opt/app-root/src
 
-# Install production dependencies
-COPY package.json package-lock.json* ./
-RUN npm install --production
+# Install dependencies and build
+RUN npm install && npm run build
 
-# Copy application files (static HTML/CSS/JS and server)
-COPY . .
+# Runtime stage
+FROM registry.ocp4.example.com:8443/ubi8/nginx-118:1
 
-# Expose port for the Node server
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Copy built application from builder stage
+COPY --from=builder /opt/app-root/src/dist /usr/share/nginx/html
+
+# Expose port
 EXPOSE 8080
 
-# Start the Node server which serves static files and proxies /api
-CMD ["node", "server.js"]
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
