--- a/openshift/02-postgresql.yaml
+++ b/openshift/02-postgresql.yaml
@@ -2,25 +2,25 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgresql-pvc
-  namespace: devops-incident-board-app
-  labels:
-    app: postgresql
+  namespace: incident-board
 spec:
   accessModes:
     - ReadWriteOnce
+  storageClassName: standard
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: postgresql
-  namespace: devops-incident-board-app
+  namespace: incident-board
   labels:
     app: postgresql
+    tier: database
 spec:
+  serviceName: postgresql
   replicas: 1
   selector:
     matchLabels:
@@ -29,27 +29,34 @@ spec:
     metadata:
       labels:
         app: postgresql
+        tier: database
     spec:
       containers:
       - name: postgresql
         image: postgres:15-alpine
         imagePullPolicy: IfNotPresent
         ports:
-        - name: postgresql
-          containerPort: 5432
-          protocol: TCP
-        envFrom:
-        - secretRef:
-            name: postgresql-secret
-        - configMapRef:
-            name: postgresql-config
-        volumeMounts:
-        - name: postgresql-storage
-          mountPath: /var/lib/postgresql/data
-          subPath: postgresql
-        - name: init-script
-          mountPath: /docker-entrypoint-initdb.d
-          readOnly: true
+        - containerPort: 5432
+          name: postgres
+        env:
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              name: incident-board-config
+              key: DB_NAME
+        - name: POSTGRES_USER
+          valueFrom:
+            configMapKeyRef:
+              name: incident-board-config
+              key: DB_USER
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: incident-board-secrets
+              key: DB_PASSWORD
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
+        
         resources:
           requests:
             memory: "256Mi"
@@ -57,50 +64,52 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
+        
+        volumeMounts:
+        - name: postgresql-storage
+          mountPath: /var/lib/postgresql/data
+        
         livenessProbe:
           exec:
             command:
             - /bin/sh
             - -c
-            - pg_isready -U postgres
+            - pg_isready -U $POSTGRES_USER
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 3
+        
         readinessProbe:
           exec:
             command:
             - /bin/sh
             - -c
-            - pg_isready -U postgres
-          initialDelaySeconds: 10
+            - pg_isready -U $POSTGRES_USER
+          initialDelaySeconds: 5
           periodSeconds: 5
           timeoutSeconds: 3
           failureThreshold: 2
+      
       volumes:
       - name: postgresql-storage
         persistentVolumeClaim:
           claimName: postgresql-pvc
-      - name: init-script
-        configMap:
-          name: postgresql-config
-          items:
-          - key: init.sql
-            path: 01-init.sql
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: postgresql
-  namespace: devops-incident-board-app
+  namespace: incident-board
   labels:
     app: postgresql
 spec:
+  type: ClusterIP
+  clusterIP: None
   selector:
     app: postgresql
   ports:
-  - name: postgresql
-    port: 5432
-    targetPort: postgresql
+  - port: 5432
+    targetPort: 5432
     protocol: TCP
-  type: ClusterIP
+    name: postgres
